2007-03-06  Richard Dale  <rdale@foton.es>

	* A GCHandle was being used to hold the 'internalPointer' value in a 
	  QModelIndex. A new one was being allocated everytime a new index
	  was created by QAbstractItemModel.CreateIndex(), which meant that
	  different GCHandles could hold the same underlying 'Target' instance.
	  However, this meant that the equality operator for QModelIndex no longer
	  worked correctly. So GCHandles for holding the InternalPointer() 
	  references are kept in a Dictionary with the object instance to be 
	  wrapped as the key. A reference count against the handle is used to 
	  ensure that the GCHandle is freed once there are no references to it 
	  via InternalPointer().

2007-03-06  Arno Rehn  <arno@arnorehn.de>
 
	* GCHandles for QModelIndex'es are now stored in a Dictionary.
	  QAbstractItemModel.CreateIndex() looks up a GCHandle in the Dictionary
	  and if it exists it is passed to the C++ function. Child items of a tree model
	  can now be selected.
	* In the simpletreemodel example the entries of default.txt are now being read correctly

2007-03-05  Richard Dale  <rdale@foton.es>

	* Free up some GCHandles when they're finished with

2007-03-03  Arno Rehn  <arno@arnorehn.de>

	* Added QModelIndex.InternalPointer() and QAbstractItemModel.CreateIndex()
	* Added simpletreemodel example (doesn't fully work yet)
	* Fixed invocation of methods with an enum as a argument

2007-02-28  Arno Rehn  <arno@arnorehn.de>

	* Don't include inherited signals/slots when building up the metaobject
	* Added seperate methods for getting all the signals/slots of a class, including
	  inherited ones. This is needed for InvokeCustomSlot() and SignalInvocation.Invoke()
	* Changed qt_metacall to be more like the one genereted by moc:
		* First call qt_metacall of the base class
		* If the return value is postive, it was a C++ slot/signal/property, return
		* If the return value is negative, look for C# slots/signals/properties
		  and call them